-
Bug
-
Resolution: Done
-
P1: Critical
-
5.2.0 Alpha
-
Linux KDE, Ubuntu 12.04.3 LTS, gcc 4.6 64bit
-
cf092abdfc888f19a607a43c9b4bac776b5c1f8e
qWarning("QSocketNotifier: Can only be used with threads started with QThread");
0 QSocketNotifier::QSocketNotifier qsocketnotifier.cpp 191 0x7ffff61a7e3e
1 qDBusRealAddWatch qdbusintegrator.cpp 280 0x7fffee7de050
2 qDBusAddWatch qdbusintegrator.cpp 250 0x7fffee7dde84
3 ?? /lib/x86_64-linux-gnu/libdbus-1.so.3 0x7fffed2dc8cf
4 dbus_connection_set_watch_functions /lib/x86_64-linux-gnu/libdbus-1.so.3 0x7fffed2c422d
5 q_dbus_connection_set_watch_functions qdbus_symbols_p.h 150 0x7fffee7dc944
6 QDBusConnectionPrivate::setConnection qdbusintegrator.cpp 1764 0x7fffee7e578d
7 QDBusConnection::connectToBus qdbusconnection.cpp 345 0x7fffee7d4338
8 QDBusDefaultConnection::QDBusDefaultConnection qdbusconnection.cpp 1062 0x7fffee7d71c3
9 (anonymous namespace)::Q_QGS__q_sessionBus::Holder::Holder qdbusconnection.cpp 1078 0x7fffee7d5eee
10 (anonymous namespace)::Q_QGS__q_sessionBus::innerFunction qdbusconnection.cpp 1078 0x7fffee7d5f5b
11 QGlobalStatic<QDBusDefaultConnection, (* {anonymous}::Q_QGS__q_sessionBus::innerFunction), (* & {anonymous}::Q_QGS__q_sessionBus::guard)>::operator()(void) qglobalstatic.h 123 0x7fffee7d6294
12 QDBusConnection::sessionBus qdbusconnection.cpp 1092 0x7fffee7d60b6
13 DBusConnection::DBusConnection dbusconnection.cpp 69 0x7ffff0a67108
14 QSpiAccessibleBridge::QSpiAccessibleBridge bridge.cpp 67 0x7ffff0a59ac2
15 QXcbIntegration::QXcbIntegration qxcbintegration.cpp 177 0x7ffff09f4bad
16 QXcbIntegrationPlugin::create main.cpp 58 0x7ffff0a0ead9
17 loadIntegration qplatformintegrationfactory.cpp 64 0x7ffff675e2da
18 QPlatformIntegrationFactory::create qplatformintegrationfactory.cpp 81 0x7ffff675e38c
19 init_platform qguiapplication.cpp 897 0x7ffff6768a9c
20 QGuiApplicationPrivate::createPlatformIntegration qguiapplication.cpp 1028 0x7ffff6769974
21 QGuiApplicationPrivate::createEventDispatcher qguiapplication.cpp 1043 0x7ffff6769a03
22 QApplicationPrivate::createEventDispatcher qapplication_qpa.cpp 85 0x7ffff73acbb8
23 QCoreApplication::init qcoreapplication.cpp 708 0x7ffff615a3cf
24 QCoreApplication::QCoreApplication qcoreapplication.cpp 635 0x7ffff615a199
25 QGuiApplication::QGuiApplication qguiapplication.cpp 492 0x7ffff67679a5
26 QApplication::QApplication qapplication.cpp 540 0x7ffff7337b1f
27 SharedTools::QtSingleApplication::QtSingleApplication qtsingleapplication.cpp 56 0x40712a
28 main main.cpp 302 0x40c3b2
QObject::startTimer: QTimer can only be used with threads started with QThread
0 QObject::startTimer qobject.cpp 1464 0x7ffff61978f8 1 qDBusRealAddTimeout qdbusintegrator.cpp 176 0x7fffee7dda7c 2 qDBusAddTimeout qdbusintegrator.cpp 161 0x7fffee7dd948 3 ?? /lib/x86_64-linux-gnu/libdbus-1.so.3 0x7fffed2d9bfd 4 dbus_connection_send_with_reply /lib/x86_64-linux-gnu/libdbus-1.so.3 0x7fffed2c63c0 5 dbus_connection_send_with_reply_and_block /lib/x86_64-linux-gnu/libdbus-1.so.3 0x7fffed2c6629 6 q_dbus_connection_send_with_reply_and_block qdbus_symbols_p.h 135 0x7fffee7dc827 7 QDBusConnectionPrivate::sendWithReply qdbusintegrator.cpp 1949 0x7fffee7e6e8f 8 QDBusConnection::call qdbusconnection.cpp 584 0x7fffee7d4bf9 9 QDBusAbstractInterface::callWithArgumentList qdbusabstractinterface.cpp 476 0x7fffee7faa6f 10 QDBusAbstractInterface::internalConstCall qdbusabstractinterface.cpp 815 0x7fffee7fb619 11 QDBusConnectionInterface::isServiceRegistered qdbusconnectioninterface.cpp 210 0x7fffee7d9ae9 12 DBusConnection::DBusConnection dbusconnection.cpp 74 0x7ffff0a671cf 13 QSpiAccessibleBridge::QSpiAccessibleBridge bridge.cpp 67 0x7ffff0a59ac2 14 QXcbIntegration::QXcbIntegration qxcbintegration.cpp 177 0x7ffff09f4bad 15 QXcbIntegrationPlugin::create main.cpp 58 0x7ffff0a0ead9 16 loadIntegration qplatformintegrationfactory.cpp 64 0x7ffff675e2da 17 QPlatformIntegrationFactory::create qplatformintegrationfactory.cpp 81 0x7ffff675e38c 18 init_platform qguiapplication.cpp 897 0x7ffff6768a9c 19 QGuiApplicationPrivate::createPlatformIntegration qguiapplication.cpp 1028 0x7ffff6769974 20 QGuiApplicationPrivate::createEventDispatcher qguiapplication.cpp 1043 0x7ffff6769a03 21 QApplicationPrivate::createEventDispatcher qapplication_qpa.cpp 85 0x7ffff73acbb8 22 QCoreApplication::init qcoreapplication.cpp 708 0x7ffff615a3cf 23 QCoreApplication::QCoreApplication qcoreapplication.cpp 635 0x7ffff615a199 24 QGuiApplication::QGuiApplication qguiapplication.cpp 492 0x7ffff67679a5 25 QApplication::QApplication qapplication.cpp 540 0x7ffff7337b1f 26 SharedTools::QtSingleApplication::QtSingleApplication qtsingleapplication.cpp 56 0x40712a 27 main main.cpp 302 0x40c3b2